@@ -208,51 +208,13 @@ class IMP_Application extends Horde_Registry_Application
     }
 
     /**
-     * @param array $opts         Additional options:
-     *   - For 'max_recipients' and 'max_timelimit', 'value' is the number of
-     *     recipients in the current message.
      */
     public function hasPermission($permission, $allowed, $opts = array())
     {
         if (is_array($allowed)) {
             $allowed = max($allowed);
         }
-
-        switch ($permission) {
-        case 'create_folders':
-            // No-op
-            break;
-
-        case 'max_folders':
-            if (empty($opts['value'])) {
-                return ($allowed >= count($GLOBALS['injector']->getInstance('IMP_Imap_Tree')));
-            }
-            break;
-
-        case 'max_recipients':
-            if (isset($opts['value'])) {
-                return ($allowed >= $opts['value']);
-            }
-            break;
-
-        case 'max_timelimit':
-            if (isset($opts['value'])) {
-                $sentmail = $GLOBALS['injector']->getInstance('IMP_Sentmail');
-                if (!($sentmail instanceof IMP_Sentmail_Base)) {
-                    Horde::logMessage('The permission for the maximum number of recipients per time period has been enabled, but no backend for the sent-mail logging has been configured for IMP.', 'ERR');
-                    return true;
-                }
-
-                try {
-                    $opts['value'] += $sentmail->numberOfRecipients($GLOBALS['conf']['sentmail']['params']['limit_period'], true);
-                } catch (IMP_Exception $e) {}
-
-                return ($allowed >= $opts['value']);
-            }
-            break;
-        }
-
-        return (bool)$allowed;
+        return $allowed;
     }
 
     /* Menu methods. */
