@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [jan] Display correct values in permission-denied error messages (Bug #11253).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -2745,7 +2745,7 @@
    <date>2012-06-26</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [jan] Display correct values in permission-denied error messages (Bug #11253).
    </notes>
   </release>
  </changelog>
