@@ -2,6 +2,7 @@
 v5.0.23-git
 -----------
 
+[jan] Display correct values in permission-denied error messages (Bug #11253).
 
 
 -------
